--- a/assets/style.css
+++ b/assets/style.css
@@ -6,8 +6,8 @@ variables styling
     --lightgrey: #959ca7;
     --darkgrey: #4c525a;
     --green: #00b289;
-	--white: #fff;
-	--textgrey: #777;
+    --white: #fff;
+    --textgrey: #777;
 }
 
 /*-----------------------------
@@ -22,10 +22,10 @@ general
 }
 
 @font-face {
-	font-family: "Proximanova regular";
-	font-style: normal;
-	font-weight: 400;
-	src: url("https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/58882027df653d342d043883_ProximaNova-Regular.otf") format("opentype");
+    font-family: "Proximanova regular";
+    font-style: normal;
+    font-weight: 400;
+    src: url("https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/58882027df653d342d043883_ProximaNova-Regular.otf") format("opentype");
 }
 
 @font-face {
@@ -42,15 +42,16 @@ html, body {
 body {
     background: #faffff;
     font-family: "Proximanova regular", Georgia, sans-serif;
-	font-size: 14px;
-	margin: 0;
-	padding: 0;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
 }
+
 h1 {
     color: #00b289;
     font-size: 2.45em;
-	font-family: "Proximanova light";
-	font-weight: 300;
+    font-family: "Proximanova light";
+    font-weight: 300;
 }
 
 a {
@@ -70,37 +71,40 @@ sup {
 p {
     color: var(--textgrey);
     font-size: 1.12em;
-	font-family: "Proximanova regular";
-	font-weight: 400;
-	line-height: 24px;
+    font-family: "Proximanova regular";
+    font-weight: 400;
+    line-height: 24px;
 }
+
 .fas.fa-chevron-down {
     font-size: 12px;
     margin-left: 7px;
 }
 
-.button{
-	background-color: var(--green);
-	border-radius: 4px;
-	color: var(--white);
-	padding: 16px 26px;
-	text-transform: uppercase;
-	display: inline-block;
-	letter-spacing: 1px;
+.button {
+    background-color: var(--green);
+    border-radius: 4px;
+    color: var(--white);
+    padding: 16px 26px;
+    text-transform: uppercase;
+    display: inline-block;
+    letter-spacing: 1px;
 }
-.button-outline{
-	border:1px solid var(--green);
-	border-radius: 4px;
-	color: var(--green);
-	background-color: transparent;
-	padding: 14px 14px;	
+
+.button-outline {
+    border: 1px solid var(--green);
+    border-radius: 4px;
+    color: var(--green);
+    background-color: transparent;
+    padding: 14px 14px;
 }
-.section-grey{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	background-color: var(--grey);
+
+.section-grey {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: var(--grey);
 }
 
 /*-----------------------------
@@ -122,34 +126,39 @@ header
     display: flex;
     position: sticky;
     top: 0;
-	width: 100%;
-	z-index: 1;
+    width: 100%;
+    z-index: 1;
 }
 
-.header-nav{
-	display: flex;
-	align-items: center;
-	padding: 8px 0;
+.header-nav {
+    display: flex;
+    align-items: center;
+    padding: 8px 0;
     justify-content: end;
     width: 940px;
 }
-.header-nav__logo{
-	width: 160px;
-	margin-right: auto;
+
+.header-nav__logo {
+    width: 160px;
+    margin-right: auto;
 }
-.header-nav__item{
-	display: inline-block;
-	list-style-type: none;
-	text-transform: uppercase;
-	letter-spacing: .08em;
-	cursor: pointer;
+
+.header-nav__item {
+    display: inline-block;
+    list-style-type: none;
+    text-transform: uppercase;
+    letter-spacing: .08em;
+    cursor: pointer;
 }
-.header-nav__item a{
-	padding: 14px 14px;
+
+.header-nav__item a {
+    padding: 14px 14px;
 }
+
 .header-nav__menu .button {
-	margin-left: 25px;
+    margin-left: 25px;
 }
+
 /* Dropdown Content (Hidden by Default) */
 .header-dropdown {
     display: none;
@@ -183,14 +192,13 @@ header
     display: block;
 }
 
-
 /*-----------------------------
 Nils
 section-1
 -----------------------------*/
 
-.section-1  {
-    width:940px;
+.section-1 {
+    width: 940px;
     display: flex;
     padding-top: 50px;
 }
@@ -199,9 +207,9 @@ section-1
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-     }
+}
 
-.section-1__button{
+.section-1__button {
     background-color: #00b289;
     border-radius: 4px;
     color: #fff;
@@ -210,7 +218,7 @@ section-1
     margin-right: auto;
 }
 
-.section-1__button:hover{
+.section-1__button:hover {
     opacity: 0.9;
 }
 
@@ -218,343 +226,383 @@ section-1
     width: 750px;
 }
 
-
 /*-----------------------------
 Zoey
 section-4
 -----------------------------*/
-.section-4{
-	width:940px;
-	color: var(--darkgrey);
-	display: flex;
-	flex-direction: column;
+.section-4 {
+    width: 940px;
+    color: var(--darkgrey);
+    display: flex;
+    flex-direction: column;
 }
 
-.section-4-header__title{
-	display: block;
-	text-align: center;
-	color: #00b289;
-	font-size: 2.5em;
-	font-family: "Proximanova light";
-	margin-bottom: 0;
+.section-4-header__title {
+    display: block;
+    text-align: center;
+    color: #00b289;
+    font-size: 2.5em;
+    font-family: "Proximanova light";
+    margin-bottom: 0;
 }
 
-#tabs{
-	display: flex;
-	flex-direction: column;
+#tabs {
+    display: flex;
+    flex-direction: column;
 }
 
-.section-4-main__tabs{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	flex-wrap: wrap;
-	margin-top: 0;
-	padding: 20px 110px; 
-	border-bottom: 1px solid #ddd;
-}
-.section-4-list{
-	list-style-type: none;
-	padding: 8px;
-}
-.active-tab{
-	color: var(--green);
-}
-#tabs-1 , #tabs-2, #tabs-3 , #tabs-4, #tabs-5 {
-	display: flex;
-}
-.section-4-main__item1{
-	border-bottom: 1px solid #ddd;
-	align-self: flex-start;
-	padding: 20px;
-	padding-bottom: 0
-}
-.section-4-main__item1 div{
-	padding: 20px;
-	padding-bottom: 0;
-	margin: 10px;
-	margin-bottom: 0;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-	border-radius: 25px 25px 0 0;
-	border-bottom: 0; 
+.section-4-main__tabs {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 0;
+    padding: 20px 110px;
+    border-bottom: 1px solid #ddd;
 }
 
-.section-4-main__item1 img{
-	border:1px solid #ddd;
-	margin: 0;
-	border-bottom: 0;
+.section-4-list {
+    list-style-type: none;
+    padding: 8px;
 }
 
-.section-4-main__item2{
-	padding: 10px;
+.active-tab {
+    color: var(--green);
 }
 
-.section-4-main__moving{
-	border-radius: 50%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-	padding: 15px;
-	width: 90px;
-	height: 90px;	
-	-webkit-animation: slidedown 3s infinite alternate;
-	   -moz-animation: slidedown 3s infinite alternate;
-	     -o-animation: slidedown 3s infinite alternate;
-	        animation: slidedown 3s infinite alternate;
-}
-@-webkit-@keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 40px;
-	}
-	to{
-		margin-top: 40px;
-		margin-bottom: 20px;
-	}
+#tabs-1, #tabs-2, #tabs-3, #tabs-4, #tabs-5 {
+    display: flex;
 }
 
-@-moz-@keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 40px;
-	}
-	to{
-		margin-top: 40px;
-		margin-bottom: 20px;
-	}
+.section-4-main__item1 {
+    border-bottom: 1px solid #ddd;
+    align-self: flex-start;
+    padding: 20px;
+    padding-bottom: 0
 }
 
-@-o-@keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 40px;
-	}
-	to{
-		margin-top: 40px;
-		margin-bottom: 20px;
-	}
+.section-4-main__item1 div {
+    padding: 20px;
+    padding-bottom: 0;
+    margin: 10px;
+    margin-bottom: 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 25px 25px 0 0;
+    border-bottom: 0;
+}
+
+.section-4-main__item1 img {
+    border: 1px solid #ddd;
+    margin: 0;
+    border-bottom: 0;
+}
+
+.section-4-main__item2 {
+    padding: 10px;
+}
+
+.section-4-main__moving {
+    border-radius: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    width: 90px;
+    height: 90px;
+    -webkit-animation: slidedown 3s infinite alternate;
+    -moz-animation: slidedown 3s infinite alternate;
+    -o-animation: slidedown 3s infinite alternate;
+    animation: slidedown 3s infinite alternate;
+}
+
+@-webkit- @keyframes slidedown {
+    from {
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
+    to {
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+}
+
+@-moz- @keyframes slidedown {
+    from {
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
+    to {
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+}
+
+@-o- @keyframes slidedown {
+    from {
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
+    to {
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
 }
 
 @keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 40px;
-	}
-	to{
-		margin-top: 40px;
-		margin-bottom: 20px;
-	}
+    from {
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+    to {
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
 }
 
-.section-4-main__item2 h2{
-	margin-top: 10px; 
-	font-size: 2.3em;
-	font-family: "Proximanova light";
-	color: #00b289;
+.section-4-main__item2 h2 {
+    margin-top: 10px;
+    font-size: 2.3em;
+    font-family: "Proximanova light";
+    color: #00b289;
 }
-.section-4-main__item2 p{
-	display: inline-block;
-	color: #696969;
-	line-height: 20px;
-	font-size: 1.1em;
-	margin-top: 40px;
+
+.section-4-main__item2 p {
+    display: inline-block;
+    color: #696969;
+    line-height: 20px;
+    font-size: 1.1em;
+    margin-top: 40px;
 }
-.section-4-main__item2 p a{
-	margin-right: 40px;
-	color: #00b289; 
+
+.section-4-main__item2 p a {
+    margin-right: 40px;
+    color: #00b289;
 }
+
 .fas.fa-chevron-right {
     font-size: 12px;
-    margin-left: 7px;}
-.section-4__button{
-	background-color: #00b289;
-	border-radius: 4px;
-	color: #fff;
-	letter-spacing: 1px;
-	padding: 16px 25px;
-	margin: 40px auto 150px auto;
+    margin-left: 7px;
 }
-.section-4__button:hover{
-	opacity: 0.9;
+
+.section-4__button {
+    background-color: #00b289;
+    border-radius: 4px;
+    color: #fff;
+    letter-spacing: 1px;
+    padding: 16px 25px;
+    margin: 40px auto 150px auto;
 }
+
+.section-4__button:hover {
+    opacity: 0.9;
+}
+
 /*-----------------------------
 Zoey
 section-5
 -----------------------------*/
-.section-5{
-	width: 940px;
-	display: flex;
+.section-5 {
+    width: 940px;
+    display: flex;
     flex-direction: column;
-	color: #696969;	
-}
-.section-5-header__title{
-	display: block;
-	text-align: center;
-	color: #00b289;
-	font-size: 2.5em;
-	font-family: "Proximanova light";
-	margin-bottom: 1.2rem;
+    color: #696969;
 }
 
-.section-5-header__subtitle{
-	display: block;
-	text-align: center;
-	color: #696969;
-	font-size: 1.2em;
-	font-family: "Proximanova light";
-	margin-bottom: 0;
+.section-5-header__title {
+    display: block;
+    text-align: center;
+    color: #00b289;
+    font-size: 2.5em;
+    font-family: "Proximanova light";
+    margin-bottom: 1.2rem;
 }
 
-.section-5-main{
-	display: flex;
-	justify-content: space-around;
-	align-items: center; 
+.section-5-header__subtitle {
+    display: block;
+    text-align: center;
+    color: #696969;
+    font-size: 1.2em;
+    font-family: "Proximanova light";
+    margin-bottom: 0;
 }
 
-.section-5-main__item{
+.section-5-main {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.section-5-main__item {
     text-align: center;
 }
 
-.section-5-main__moving{
-	border-radius: 50%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-	padding: 20px;
-	width: 95px;
-	height: 95px;
-	margin: auto;
-	-webkit-animation: slidedown 3s infinite alternate;
-	   -moz-animation: slidedown 3s infinite alternate;
-	     -o-animation: slidedown 3s infinite alternate;
-	        animation: slidedown 3s infinite alternate;
+.section-5-main__moving {
+    border-radius: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 95px;
+    height: 95px;
+    margin: auto;
+    -webkit-animation: slidedown 3s infinite alternate;
+    -moz-animation: slidedown 3s infinite alternate;
+    -o-animation: slidedown 3s infinite alternate;
+    animation: slidedown 3s infinite alternate;
 }
 
 @-webkit-keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 35px;
-	}
-	to{
-		margin-top: 35px;
-		margin-bottom: 20px;
-	}
+    from {
+        margin-top: 20px;
+        margin-bottom: 35px;
+    }
+    to {
+        margin-top: 35px;
+        margin-bottom: 20px;
+    }
 }
+
 @-moz-keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 35px;
-	}
-	to{
-		margin-top: 35px;
-		margin-bottom: 20px;
-	}
+    from {
+        margin-top: 20px;
+        margin-bottom: 35px;
+    }
+    to {
+        margin-top: 35px;
+        margin-bottom: 20px;
+    }
 }
+
 @-o-keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 35px;
-	}
-	to{
-		margin-top: 35px;
-		margin-bottom: 20px;
-	}
+    from {
+        margin-top: 20px;
+        margin-bottom: 35px;
+    }
+    to {
+        margin-top: 35px;
+        margin-bottom: 20px;
+    }
 }
+
 @keyframes slidedown {
-	from{
-		margin-top: 20px;
-		margin-bottom: 35px;
-	}
-	to{
-		margin-top: 35px;
-		margin-bottom: 20px;
-	}
+    from {
+        margin-top: 20px;
+        margin-bottom: 35px;
+    }
+    to {
+        margin-top: 35px;
+        margin-bottom: 20px;
+    }
 }
 
-.section-5-main__footer{
-	background-image: url('https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/594c93d4f9a65a6318d46598_world-map.png');
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	height: 500px;
-	text-align: center;
-	padding-top: 20px;	
+.section-5-main__footer {
+    background-image: url('https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/594c93d4f9a65a6318d46598_world-map.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 500px;
+    text-align: center;
+    padding-top: 20px;
 }
 
-.section-5__button{
-	background-color: #00b289;
-	border-radius: 4px;
-	color: #fff;
-	letter-spacing: 1px;
-	padding: 16px 25px;
-	margin:auto;
+.section-5__button {
+    background-color: #00b289;
+    border-radius: 4px;
+    color: #fff;
+    letter-spacing: 1px;
+    padding: 16px 25px;
+    margin: auto;
 }
-.section-5__button:hover{
-	opacity: 0.9;
+
+.section-5__button:hover {
+    opacity: 0.9;
 }
 
 /*-----------------------------
 Zoey
 section-6
 -----------------------------*/
-.section-6{
-	width: 940px;
-	display: flex;
-	color: #696969;
-	margin-top: 100px;
-	margin-bottom: 100px; 
-}
-.section-6-part1{
-	display: flex;
-	flex-direction: column;
-	padding-bottom: 30px;
-}	
-
-.section-6-part1__title{
-	display: inline-block;
-	text-align: left;
-	color: #00b289;
-	font-size: 2.3em;
-	font-family: "Proximanova light";
-	margin-bottom: 1.2rem;
-}
-.section-6-part1 p{
-	line-height: 20px;
-	font-size: 1.1rem;
-	margin-bottom: 50px;
-}
-.section-6__button{
-	background-color: #00b289;
-	border-radius: 4px;
-	color: #fff;
-	letter-spacing: 1px;
-	padding: 16px 25px;
-	margin-right: auto;
+.section-6 {
+    width: 940px;
+    display: flex;
+    color: #696969;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-.section-6__button:hover{
-	opacity: 0.9;
+.section-6-part1 {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
 }
 
-.section-6-part2{
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-	width: 480px;
-}
-.section-6-part2 ul{	
-	list-style-type: none;
-	font-size: 1.4rem;
-	padding: 0;
-}
-
-.section-6-part2 ul li{
-	padding: 10px;
-	cursor: default;
-}
-.section-6-part2 ul li span:hover{
-	margin-left: 15px;
-	transition: 0.6s;
+.section-6-part1__title {
+    display: inline-block;
+    text-align: left;
+    color: #00b289;
+    font-size: 2.3em;
+    font-family: "Proximanova light";
+    margin-bottom: 1.2rem;
 }
 
-.section-6-part2 ul li img{
-	vertical-align: bottom;
-	margin: 0 10px;
+.section-6-part1 p {
+    line-height: 20px;
+    font-size: 1.1rem;
+    margin-bottom: 50px;
 }
+
+.section-6__button {
+    background-color: #00b289;
+    border-radius: 4px;
+    color: #fff;
+    letter-spacing: 1px;
+    padding: 16px 25px;
+    margin-right: auto;
+}
+
+.section-6__button:hover {
+    opacity: 0.9;
+}
+
+.section-6-part2 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    width: 480px;
+}
+
+.section-6-part2 ul {
+    list-style-type: none;
+    font-size: 1.4rem;
+    padding: 0;
+}
+
+.section-6-part2 ul li {
+    padding: 10px;
+    cursor: default;
+}
+
+.section-6-part2 ul li span:hover {
+    margin-left: 15px;
+    transition: 0.6s;
+}
+
+.section-6-part2 ul li img {
+    vertical-align: bottom;
+    margin: 0 10px;
+}
+
+/*-----------------------------
+Nils
+section-7
+-----------------------------*/
+.section-7-title {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.section-7-part1 {
+    max-width: 940px;
+    display: flex;
+}
+
 /*-----------------------------
 Nils
 section-8
@@ -563,9 +611,11 @@ section-8
 .section-8 {
     display: flex;
     flex-direction: column;
-    align-items: center;l
+    align-items: center;
+    padding-bottom: 80px;
 }
-.section-8__button{
+
+.section-8__button {
     background-color: #00b289;
     border-radius: 4px;
     color: #fff;
@@ -575,9 +625,10 @@ section-8
     margin-left: auto;
 }
 
-.section-8__button:hover{
+.section-8__button:hover {
     opacity: 0.9;
 }
+
 /*-----------------------------
 Nils
 section-9
@@ -587,3 +638,65 @@ section-9
 Nils
 footer
 -----------------------------*/
+
+footer {
+    padding-top: 80px;
+    background-color: #353736;
+    color: #adadad;
+    padding-bottom: 80px;
+}
+
+.footer-container {
+    max-width: 940px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-title, .footer-subtitle {
+    color: white;
+    font-family: "Proximanova regular";
+    font-size: 14px;
+}
+.footer-title {
+    border-bottom: 1px dotted #4c525a;
+}
+
+.footer-subtitle {
+    padding-top: 10px;
+}
+
+.footer-list {
+    margin-bottom: 10px;
+    padding-left: 0;
+}
+
+.footer-list-item {
+    list-style: none;
+    margin-bottom: 5px;
+    padding-left: 10px;
+}
+
+.footer-link {
+    color: #b1b1b1;
+    text-decoration: none;
+    padding-left: 5px;
+}
+
+.footer-column-1 {
+    flex-grow: 1;
+    padding-left: 100px;
+}
+.footer-column-2 {
+    flex-grow: 1;
+    padding-left: 70px;
+}
+.footer-column-3 {
+    flex-grow: 1;
+    padding-left: 100px;
+}
+
+.footer-link:hover {
+    color: white;
+}
