--- a/assets/media.css
+++ b/assets/media.css
@@ -111,7 +111,7 @@
 		text-align: center;
 	}
 	.section-3-main__items{
-		padding: 10px;
+		padding: 10px 40px;
 	}
 	.section-4-main__tabs{
 		flex-direction: column;
