--- a/assets/style.css
+++ b/assets/style.css
@@ -365,11 +365,20 @@ section-4
     padding: 8px;
 }
 
+.section-4-list__link{
+    background-color: white;
+    border: 0;
+    cursor: pointer;
+}
+
 .active-tab {
     color: var(--green);
 }
 
-#tabs-1, #tabs-2, #tabs-3, #tabs-4, #tabs-5 {
+.tab-content{
+    display: none;
+}
+.active-content {
     display: flex;
 }
 
